fixing some letter spacing to cases_title

--- a/css/style.css
+++ b/css/style.css
@@ -340,7 +340,7 @@ footer {
   padding: 1.5rem 0 1.25rem;
   textgit status-transform: uppercase;
   font-size: 1rem;
-  letter-spacing: .25rem;
+  letter-spacing: .125rem;
   font-family: "poppins", sans-serif;
   font-weight: 600;
   font-style: normal;
